src/test/ui/huge-struct.stderr
error: the type `SXX<SXX<SXX<u32>>>` is too big for the current architecture
  --> $DIR/huge-struct.rs:49:9
   |
LL |     let fat: Option<SXX<SXX<SXX<u32>>>> = None;
   |         ^^^

error: aborting due to previous error

